# prop-probes-iclr

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/finetune/: llama_finetune.yaml  tulu_finetune.yaml
experiments/point_hessians/paper/: llama_scale_False_interpolating_0.5.yaml  tulu_scale_False_interpolating_0.5.yaml
notebooks/: eval_form_master.ipynb  paper_plots.ipynb  probe_experiments.ipynb  subspace_experiments.ipynb
scripts/: eval_das.py  export_dataset.py  export_finetuning_dataset.py  probe_threshold.py  run_eval_domain_probe.py  run_eval_form.py  run_hessians.py  train_domain_probes.py
slurm/: run_das.sh  run_eval_das.sh  run_eval_domain_probe.sh  run_eval_form.sh  run_eval_probe.sh  run_genderbias.sh  run_hessians.sh  run_probe_threshold.sh  run_train_domain_probes.sh  run_vector_subspace_baseline.sh
src/coref/: __init__.py  datascience.py  eval_subspace.py  expt_utils.py  finetune.py  flow.py  form_processors.py  hessians.py  hf_interventions.py  injection_interventions.py  interventions.py  models.py  parameters.py  run_manager.py  saliency.py  train_das.py  utils.py  vector_subspace_baseline.py
src/coref/datasets/: api.py
src/coref/datasets/auto_gen/: gpt.py  process_prompt.py  readme.md  rewrite_template.py
src/coref/datasets/domains/: common.py  simple.py
src/coref/datasets/raw/: foods.txt  (+5 more)
src/coref/experiments/: triplet_expts.py
src/coref/gender/: coref_scores.py  eval.py  synthetic.py
src/coref/probes/: activation_localization.py  centroid_probe.py  common.py  evaluate.py  lookup_probe.py  subspace_lookup.ipynb
(+10 files in other folders)
